# SimpleXMLParser

./: CMakeLists.txt  Exception.cpp  Exception.h  Parser.cpp  Parser.h
Test/: test.cpp
testingFiles/: additionForTest1.xml  additionForTest2.xml  additionForTest3.xml  test1.xml  test2.xml  test3.xml
